--- a/styles/_keyframes.scss
+++ b/styles/_keyframes.scss
@@ -348,3 +348,12 @@
     opacity: 100%;
   }
 }
+
+@keyframes WinterTextFadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
