too many changes to remember

--- a/styles/_text.scss
+++ b/styles/_text.scss
@@ -1,5 +1,7 @@
 // Each sentence or part of the text uses keyframes. Delay is used to apply the animations at the right parts in the sequence
 
+// The name of this poem is "Four Seasons", and the writer is Cecil Frances Alexander
+
 .text {
   width: 100%;
   height: 100%;
